--- a/deploy/k8s.yaml
+++ b/deploy/k8s.yaml
@@ -25,7 +25,7 @@ spec:
         image: snimmagadda/github-pr-bot
         env:
         - name: APP_ID
-          value: 1234
+          value: "1234"
         - name: CERT_PATH
           value: /temp/bot.pem
         - name: OWNER
